--- a/css/style.css
+++ b/css/style.css
@@ -385,10 +385,17 @@
     .contact {
         transform: translateX(-70%);
     }
+    .logo {
+        width: 280px;
+    }
 }
+
 @media (max-width: 400px) {
     .contact {
         transform: translateX(-85%);
+    }
+    .logo {
+        width: 210px;
     }
 }
 
